# regexped

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  get_wasm_merge.sh  go.mod  main.go
.github/workflows/: build.yml  ci.yml  codeql.yml  docker.yml  (+3 more)
compile/: aho_corasick.go  compile.go  compile_engine.go  compile_test.go  dfa.go  dfa_engine.go  diag.go  engine_backtrack.go  engine_backtrack_test.go  engine_compiled_dfa.go  engine_dfa.go  engine_dfa_test.go  engine_onepass.go  engine_tdfa.go  engine_tdfa_test.go  engine_types.go  lit_anchor.go  lit_anchor_test.go  mandatory_lit.go  mandatory_lit_test.go  onepass_check.go  prefix_scan.go  selector.go  selector_test.go  set.go  set_emit.go  set_test.go  split.go  t3_trig_test.go  wasm.go
config/: config.go  config_test.go
docs/: README.md  as-api.md  browser.md  c-api.md  cli.md  docker.md  engines.md  fastedge.md  go-api.md  js-api.md  node.md  re2.md  rust-api.md  sets.md  ts-api.md  wasm.md  wasmtime.md  workers.md
examples/: Makefile  README.md
examples/fastedge/regex_auto_use/: Cargo.toml  lib.rs
generate/: as_stub.go  c_stub.go  dummy_main.go  generate.go  generate_test.go  go_stub.go  js_stub.go  rust_stub.go  set_stub.go  ts_stub.go
merge/: merge.go  merge_test.go
perf_test/: Makefile  bench.sh  bench_find.sh  go.mod  main.go  regexped.yaml  regexped_full.yaml  regexped_ipv6.yaml  run_tests.sh
perftest/: Makefile  go.mod  go.sum  main.go  shims.go
re2_test/: go.mod  main.go
re2test/: Makefile  README.md  custom-sets.txt  custom-tests.txt  go.mod  go.sum  main.go
utils/: bytes.go
(+142 files in other folders)
