[package]
name = "regex-auto-use"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex-automata = { version = "0.4", default-features = false, features = ["dfa-search"] }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
